style.css
@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Hammersmith+One&display=swap');

* {
    margin: 0;
    padding: 0;
    font-family: "Hammersmith One", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: large;
    transition: all 0.2s ease;
}

:root {
    --dark: #000011;
    --light: #F5F5FF;
    --accent1: #1E90FF;
    --accent2: #32CD32;
}

body {
    overflow-x: hidden;
}

.logo {
    color: var(--light);
    font-size: 24;
    text-transform: uppercase;
    letter-spacing: 4px;
}

a {
    color: var(--light);
    text-decoration: none;
    transition: 0.2 ease-in;
}

a:hover {
    color: var(--accent2);
    scale: 1.02;
}

nav {
    z-index: 10000;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 8vh;
    width: 100vw;
    background: var(--dark);
    position: absolute;
    top: 0;
    left: 0;
}

.logo-container {
    position: absolute;
    left: 25px;
}
.nav-container {
    width: max-content;
    height: 8vh;
    align-items: center;
    justify-content: center;
    display: flex;
    margin-left: 50px;
    margin-right: 20px;
}

.nav-list {
    display: flex;
    list-style: none;
    gap: 30px;
}

.mobile-menu {
    position: absolute;
    right: 25px;
    display: none;
    width: 3vw;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}


.mobile-menu:active {
    .fa-solid.fa-bars {
        scale: 0.95;
    }
}

.fa-solid.fa-bars {
    display: none;
    color: var(--light);
}

main {
    padding-top: 50px;
    padding-right: 30px;
    padding-bottom: 50px;
    padding-left: 80px;

    margin-top: 8vh;
    height: 100vh;
    width: 100vw;
    word-wrap: break-word;
    overflow-y: scroll;
    overflow-x: hidden;
    background: var(--light);

}

footer {
    height: 20vh;
    width: 100vw;
    display: flex;
    background: var(--dark);
    color: var(--light);
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    text-align: center;
}

footer p {
    font-size: 10px;
}
.toprow-footer, .midrow-footer {
    width: 100vw;
    height: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--accent1);

}

.footer-refferences {
    display: flex;
    list-style: none;
    gap: 50px;
}

.footer-links {
    font-weight: 100;
    font-size: 20px;
    color: var(--accent1);
}

@media (max-width: 999px) {
 
    body {
overflow-x: hidden
}

    .mobile-menu {
        z-index: 0;
    }

    main {
        z-index: 1;
        overflow-x: hidden;
        margin-top: 8vh;
        height: 100vh;
        width: 100vw;
    }

    .fa-solid.fa-bars {
        display: block;
    }

    nav{
        z-index: 1000;
    }
    .nav-list {
        display: flex;
        z-index: 1;
        position: absolute;
        top: 8vh;
        right: 0;
        width: 100vw;
        height: 30vh;
        gap: 10px;
        font-size: smaller;
        background-color: var(--dark);
        flex-direction: column;
        align-items: center;
        justify-content: space-around;
        transition: all .7s ease-out;
        transform: translateY(-200%);
    }

    .nav-list.active {
        transform: translateY(0);
    }

    footer {
        height: 40vh;
    }

    .footer-refferences {
        flex-direction: column;
    }
}

@media (max-width: 385px) {
    .logo {
        font-size: 10px;
    }
}

/* Aqui para baixo é a parte do ártigo, altere como preferir, mas mantenha o padrão!*/

.title {
    width: 100%;
    height: 10vh;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 30px;
}

